--- a/whats-for-dinner-react/package.json
+++ b/whats-for-dinner-react/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.11",
-    "@types/node": "11.11.3",
-    "@types/react": "16.8.8",
-    "@types/react-dom": "16.8.2",
+    "bootstrap": "^4.3.1",
+    "immutability-helper": "^2.7.0",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
+    "popper": "^1.0.1",
     "react": "^16.8.4",
+    "react-dev-utils": "^8.0.0",
     "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.3.3333"
   },
   "scripts": {
@@ -26,5 +33,17 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/immutability-helper": "^2.6.3",
+    "@types/jest": "24.0.11",
+    "@types/node": "^11.11.3",
+    "@types/react": "16.8.8",
+    "@types/react-dom": "16.8.2",
+    "@types/react-redux": "^7.0.5",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-router-redux": "^5.0.18",
+    "@types/redux-thunk": "^2.1.0"
+  }
 }
